# ohota-na-skidki-bot

./: .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py
.github/workflows/: deploy.yml
core/: bot.py  models.py  utils.py
core/management/commands/: start_bot.py
core/migrations/: 0001_initial.py  0002_product.py  0003_alter_product_price_alter_product_title.py  0004_alter_product_url.py  0005_notificationsetting.py
core/parsing/: utils.py  yandex_market.py
core/utils/: bot_utils.py  core_utils.py
deployment/: Dockerfile.bot  entrypoint.sh
frontend/templates/: base.html
frontend/templates/account/: login.html  signup.html
frontend/templates/pages/: home.html
ohota_na_skidki_bot/: asgi.py  settings.py  urls.py  wsgi.py
